public/css/overrides.css
.status {
  margin: 9px 10px 5px;
  padding: 5px 10px;
}
.status .height {
  display: block;
  padding-top: 3px;
}
.dropdown-toggle-trigger,
.dropdown-toggle-trigger:visited,
.dropdown-toggle-trigger:link {
  width: 190px;
  height: 64px;
  display: inline-block;
  color: #346464;
  font-weight: bold;
  font-size: 20px;
  padding: 12px;
  padding-top: 14px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
}
.dropdown-toggle-trigger:hover,
.dropdown-toggle-trigger:active {
  text-decoration: none;
  color: #346464;
  background: #fff;
}
.dropdown-toggle-trigger img {
  height: 35px;
  border-radius: 50%;
}
.dropdown-toggle-trigger .symbol {
  position: relative;
  top: 2px;
  padding-left: 5px;
}
.explorers--dropdown.open .dropdown-toggle-trigger {
  text-decoration: none;
  color: #346464;
  background-color: #e7e7e7;
}
.dropdown-menu-block {
  left: inherit;
  max-height: 400px;
  overflow-y: auto;
  width: 190px;
  top: 100px;
  border-radius: 0;
}
.dropdown-menu-block li {
  cursor: pointer;
}
.dropdown-menu-block li img {
  height: 32px;
  padding-right: 10px;
  border-radius: 50%;
}
.dropdown-menu-block li a {
  padding: 10px 20px;
}
.dropdown-menu-block {
  display: none;
  position: absolute;
  top: 100%;
  z-index: 1000;
  float: left;
  min-width: 160px;
  padding: 0;
  padding-top: 35px;
  margin: 0;
  list-style: none;
  font-size: 14px;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,.15);
  border-radius: 0px 0px 4px 4px;
  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
  box-shadow: 0 6px 12px rgba(0,0,0,.175);
  background-clip: padding-box;
}
.dropdown-menu-block > li > a {
  display: block;
  clear: both;
  font-weight: 400;
  line-height: 1.42857143;
  color: #333;
  white-space: nowrap;
  text-decoration: none;
}
.dropdown-menu-block > li > a:hover,
.dropdown-menu-block > li > a:focus {
  text-decoration: none;
  color: #262626;
  background-color: #f5f5f5;
}
.explorers--dropdown.open .dropdown-menu-block {
  display: inline-block;
}
.dropdown-menu-block input {
  position: fixed;
  top: 63px;
  border-radius: 0;
  width: 188px;
}
.quick-search {
  border: none;
  border-bottom: 1px solid #ccc;
}
.quick-search:focus {
  border-color: #ccc;
  outline: 0;
  box-shadow: none;
}
.dropdown-menu-block .no-match {
  padding: 10px;
}
.adrotator-container {
  margin: 20px 0 35px 0;
  padding: 20px 20px;
  border: dashed 1px rgba(0, 0, 0, 0.3);
}
.dropdown-menu li {
  cursor: pointer;
}
#ngProgress-container {
  top: 62px;
}
.dropdown-menu-group {
  cursor: default !important;
  padding: 10px;
}
.pointer {
  cursor: pointer;
}
.assets-search-balance {
  margin-top: 35px;
}
.assets-table-balance img,
.assets-table-transactions img {
  width: 20px;
  height: 20px;
  margin-right: 5px;
}
.assets-table-transactions > tbody > tr > td {
  word-break: break-all;
}
.assets-table-transactions > tbody > tr > td:nth-child(2) {
  min-width: 115px;
}
.flash-message {
  margin-top: 10px;
}
.search--dropdown {
  border: solid 1px rgba(255, 255, 255, 0.3);
  border-left: none;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  padding: 8px 6px 7px 6px;
  position: absolute;
  top: 1px;
  margin-top: 14px;
}
.search--dropdown:hover {
  cursor: pointer;
}
.search--dropdown .caret {
  color: #fff;
  position: relative;
  top: -2px;
}
.search--dropdown.open .dropdown-menu-block {
  display: inline-block;
  left: -167px;
  padding-top: 0;
  z-index: 2010;
}
.search--dropdown.open .dropdown-menu-block > li {
  padding: 5px;
  color: #9e9e9e;
}
.search--dropdown.open .dropdown-menu-block > li:hover {
  background-color: #f8f9fa;
}
#search {
  width: calc(100% - 30px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

@media only screen and (max-width : 767px) {
  .dropdown-menu-block {
    left: 0;
  }
  #wrap > .container {
    padding: 25px 15px 0;
  }
  .navbar-default .navbar-toggle {
    margin-top: 14px;
  }
  #search {
    width: calc(100% - 40px);
    display: inline-block;
  }
  #search.loading {
    width: calc(100% - 40px) !important;
  }
  .search--dropdown {
    border: solid 1px rgba(255, 255, 255, 0.3);
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    padding: 9px 14px 8px 14px;
    position: absolute;
    top: 0;
    right: 0;
    margin-top: 0;
  }
  .search--dropdown.open .dropdown-menu-block {
    left: -152px;
  }
  .no_matching.text-danger {
    top: 33px;
  }
}
.about-kmd-block p {
  padding-top: 10px;
}
.about-kmd-block .subIntro.last {
  padding-bottom: 15px;
}
#search-form-mobile {
  top: 64px;
  z-index: 1000;
}

@media only screen and (max-width : 767px) {
  .connection-status {
    margin-top: 54px;
  }
}

@media (min-width: 992px) {
  #search {
    width: calc(300px - 30px);
  }
  #search.loading {
    width: calc(300px - 30px) !important;
  }
  .search--dropdown {
    padding: 6px;
    right: inherit;
    position: absolute;
    top: 1px;
    margin-left: 270px;
  }
  .search--dropdown .caret {
    top: -1px;
  }
}

